--- a/Launcher/Launcher/Launcher.csproj
+++ b/Launcher/Launcher/Launcher.csproj
@@ -91,6 +91,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ApplicationUpdater.xaml.cs">
+      <DependentUpon>ApplicationUpdater.xaml</DependentUpon>
+    </Compile>
     <Compile Include="DataBase.cs" />
     <Compile Include="MainWindowLauncher.xaml.cs">
       <DependentUpon>MainWindowLauncher.xaml</DependentUpon>
@@ -100,6 +103,10 @@
     </Compile>
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="User.cs" />
+    <Page Include="ApplicationUpdater.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
