--- a/Launcher/Launcher/Launcher.csproj
+++ b/Launcher/Launcher/Launcher.csproj
@@ -98,8 +98,8 @@
     <Compile Include="MainWindowLauncher.xaml.cs">
       <DependentUpon>MainWindowLauncher.xaml</DependentUpon>
     </Compile>
-    <Compile Include="MenuItemControl.xaml.cs">
-      <DependentUpon>MenuItemControl.xaml</DependentUpon>
+    <Compile Include="ListBoxItemModuleControl.xaml.cs">
+      <DependentUpon>ListBoxItemModuleControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="User.cs" />
@@ -123,7 +123,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="MenuItemControl.xaml">
+    <Page Include="ListBoxItemModuleControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
