--- a/Launcher/Launcher/Launcher.csproj
+++ b/Launcher/Launcher/Launcher.csproj
@@ -232,6 +232,11 @@
   <ItemGroup>
     <Folder Include="Modules\" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Resources\libmupdf.dll" />
+    <Content Include="Resources\MoonPdfLib.dll" />
+    <Content Include="Resources\MouseKeyboardActivityMonitor.dll" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.94.0\build\net45\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.94.0\build\net45\System.Data.SQLite.Core.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
