--- a/Launcher/packages/repositories.config
+++ b/Launcher/packages/repositories.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\DocumentModule\packages.config" />
   <repository path="..\Launcher\packages.config" />
 </repositories>
