--- a/Launcher/Launcher/Launcher.csproj
+++ b/Launcher/Launcher/Launcher.csproj
@@ -112,6 +112,7 @@
     <Compile Include="Modules\Documents\CategoryControl.xaml.cs">
       <DependentUpon>CategoryControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Modules\Documents\DatabaseDoc.cs" />
     <Compile Include="Modules\Documents\DocumentPresenter.xaml.cs">
       <DependentUpon>DocumentPresenter.xaml</DependentUpon>
     </Compile>
