--- a/Launcher/Launcher/Launcher.csproj
+++ b/Launcher/Launcher/Launcher.csproj
@@ -274,6 +274,7 @@
   <ItemGroup />
   <ItemGroup>
     <Content Include="Resources\libmupdf.dll" />
+    <Resource Include="Resources\Logo_C_Sharp.png" />
     <Content Include="Resources\MoonPdfLib.dll" />
     <Content Include="Resources\MouseKeyboardActivityMonitor.dll" />
   </ItemGroup>
