--- a/Launcher/Launcher/Launcher.csproj
+++ b/Launcher/Launcher/Launcher.csproj
@@ -277,6 +277,8 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
+    <Content Include="Resources\GhostscriptSharp.dll" />
+    <Content Include="Resources\GhostscriptSharp.pdb" />
     <Content Include="Resources\libmupdf.dll" />
     <Resource Include="Resources\Logo_C_Sharp.png" />
     <Content Include="Resources\MoonPdfLib.dll" />
