--- a/Launcher/Launcher/Launcher.csproj
+++ b/Launcher/Launcher/Launcher.csproj
@@ -142,6 +142,10 @@
     <Compile Include="Modules\Documents\Search.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="ViewModel\ShellViewModel.cs" />
+    <Page Include="Resources\Style.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="VIew\UpdaterView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
