--- a/Launcher/Launcher/Launcher.csproj
+++ b/Launcher/Launcher/Launcher.csproj
@@ -57,38 +57,20 @@
     <Reference Include="Caliburn.Micro.Platform">
       <HintPath>..\packages\Caliburn.Micro.2.0.1\lib\net45\Caliburn.Micro.Platform.dll</HintPath>
     </Reference>
-    <Reference Include="EntityFramework">
-      <HintPath>..\packages\EntityFramework.6.1.1\lib\net45\EntityFramework.dll</HintPath>
-    </Reference>
-    <Reference Include="EntityFramework.SqlServer">
-      <HintPath>..\packages\EntityFramework.6.1.1\lib\net45\EntityFramework.SqlServer.dll</HintPath>
-    </Reference>
     <Reference Include="MahApps.Metro">
       <HintPath>..\packages\MahApps.Metro.0.14.0.0\lib\net45\MahApps.Metro.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Expression.Drawing" />
     <Reference Include="Microsoft.Expression.Effects" />
     <Reference Include="Microsoft.Expression.Interactions" />
-    <Reference Include="MoonPdfLib, Version=0.3.0.0, Culture=neutral, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\Downloads\MoonPdf-0.3.0-x86\MoonPdf-0.3.0-x86\MoonPdfLib.dll</HintPath>
-    </Reference>
     <Reference Include="MouseKeyboardActivityMonitor, Version=3.0.1.29653, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\..\Downloads\MoonPdf-0.3.0-x86\MoonPdf-0.3.0-x86\MouseKeyboardActivityMonitor.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Data.SQLite">
-      <HintPath>..\packages\System.Data.SQLite.Core.1.0.94.0\lib\net45\System.Data.SQLite.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Data.SQLite.EF6">
-      <HintPath>..\packages\System.Data.SQLite.EF6.1.0.94.0\lib\net45\System.Data.SQLite.EF6.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Data.SQLite.Linq">
-      <HintPath>..\packages\System.Data.SQLite.Linq.1.0.94.1\lib\net45\System.Data.SQLite.Linq.dll</HintPath>
-    </Reference>
     <Reference Include="System.Windows.Interactivity, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Caliburn.Micro.2.0.1\lib\net45\System.Windows.Interactivity.dll</HintPath>
     </Reference>
@@ -110,85 +92,47 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="AppBootstrapper.cs" />
+    <Compile Include="ViewModel\LauncherViewModel.cs" />
+    <Compile Include="ViewModel\LoginViewModel.cs" />
+    <Compile Include="ViewModel\UpdaterViewModel.cs" />
+    <Compile Include="VIew\LauncherView.xaml.cs">
+      <DependentUpon>LauncherView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="VIew\LoginView.xaml.cs">
+      <DependentUpon>LoginView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="VIew\UpdaterView.xaml.cs">
       <DependentUpon>UpdaterView.xaml</DependentUpon>
     </Compile>
     <Compile Include="IShell.cs" />
-    <Compile Include="VIew\Launcher.xaml.cs">
-      <DependentUpon>Launcher.xaml</DependentUpon>
-    </Compile>
     <Compile Include="UserControl\ListBoxModule.xaml.cs">
       <DependentUpon>ListBoxModule.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Modules\Documents\Book.cs" />
-    <Compile Include="Modules\Documents\CategoryControl.xaml.cs">
-      <DependentUpon>CategoryControl.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Modules\Documents\ControlTextListBoxWrap.xaml.cs">
-      <DependentUpon>ControlTextListBoxWrap.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Modules\Documents\DatabaseDoc.cs" />
-    <Compile Include="Modules\Documents\DocumentPresenter.xaml.cs">
-      <DependentUpon>DocumentPresenter.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Modules\Documents\Helper.cs" />
-    <Compile Include="Modules\Documents\HistoryControl.xaml.cs">
-      <DependentUpon>HistoryControl.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Modules\Documents\MainWindowControl.xaml.cs">
-      <DependentUpon>MainWindowControl.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Modules\Documents\Pdf.cs" />
-    <Compile Include="Modules\Documents\Search.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="ViewModel\ShellViewModel.cs" />
     <Page Include="Resources\Style.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="VIew\UpdaterView.xaml">
+    <Page Include="VIew\LauncherView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="VIew\LoginView.xaml">
-      <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="VIew\UpdaterView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="VIew\LoginView.xaml.cs">
-      <DependentUpon>LoginView.xaml</DependentUpon>
-      <SubType>Code</SubType>
-    </Compile>
-    <Page Include="VIew\Launcher.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
     <Page Include="UserControl\ListBoxModule.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Modules\Documents\CategoryControl.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Modules\Documents\ControlTextListBoxWrap.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Modules\Documents\DocumentPresenter.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Modules\Documents\HistoryControl.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Modules\Documents\MainWindowControl.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
     </Page>
     <Page Include="Resources\Icons.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -217,38 +161,6 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <None Include="Documents\GOST\ГОСТ 10150-88 Дизели судовые тепловозные и промышленные. Общие ТУ.pdf" />
-    <None Include="Documents\GOST\ГОСТ 10393 Компрессоры воздушные поршневые для тягового подвижного состава.pdf" />
-    <None Include="Documents\GOST\ГОСТ 10411-74 Оси для тепловозов железных дорог узкой колеи. Технические условия.pdf" />
-    <None Include="Documents\GOST\ГОСТ 10527-84 Тележки двухосные пассажирских вагонов магистральных железных дорог колеи 1520 мм. Технические условия.pdf" />
-    <None Include="Documents\GOST\ГОСТ 10935-97 Вагоны грузовые крытые магистральных железных дорог колеи 1520 мм. Общие технические условия.pdf" />
-    <None Include="Documents\GOST\ГОСТ 11018-2000 Тяговый подвижной состав железных дорог колеи 1520 мм. Колесные пары. Общие технические условия.pdf" />
-    <None Include="Documents\GOST\ГОСТ 12.2.056-81 Электровозы и тепловозы колеи 1520 мм. Требования безопасности.pdf" />
-    <None Include="Documents\GOST\ГОСТ 19.102-77 Стадии разработки.pdf" />
-    <None Include="Documents\GOST\ГОСТ 19.104-78 Основные надписи.pdf" />
-    <None Include="Documents\GOST\ГОСТ 19.106-78 Требования к программным документам.pdf" />
-    <None Include="Documents\GOST\ГОСТ 19.201-78 Техническое задание. Требования к содержанию и оформлению.pdf" />
-    <None Include="Documents\GOST\ГОСТ 19781_90 Обеспечение систем обработки информации программное. Термины и определения.pdf" />
-    <None Include="Documents\GOST\ГОСТ 2.611-2011 Электронный каталог изделия.pdf" />
-    <None Include="Documents\GOST\ГОСТ 20073-81 Компрессоры воздушные поршневые. Правила приемки и методы испытаний.pdf" />
-    <None Include="Documents\GOST\ГОСТ 22235-76 Вагоны грузовые. Общ. требования по обеспечению сохранности при погрузке.pdf" />
-    <None Include="Documents\GOST\ГОСТ 22253-76 Аппараты поглощающие пружинно-фрикционные для подвижного состава железных дорог колеи 1520 мм. Технические условия.pdf" />
-    <None Include="Documents\GOST\ГОСТ 22339-88 Тепловозы маневровые и промышленные. Типы и основные параметры.pdf" />
-    <None Include="Documents\GOST\ГОСТ 22947-78 Тепловозы магистральные колеи 1520 мм. ТТ в части окраски.pdf" />
-    <None Include="Documents\GOST\ГОСТ 24790-81 Тепловозы промышленные. Общие ТУ.pdf" />
-    <None Include="Documents\GOST\ГОСТ 25463-01ТЕПЛОВОЗЫ МАГИСТРАЛЬНЫХ ЖЕЛЕЗНЫХ дорог колеи 1520 мм Общие ТТ.pdf" />
-    <None Include="Documents\GOST\ГОСТ 31187-2003 Тепловозы магистральные. Общие технические требования..pdf" />
-    <None Include="Documents\GOST\ГОСТ 31428-2011 Тепловозы маневровые с электрической передачей. Общие технические требования..pdf" />
-    <None Include="Documents\GOST\ГОСТ 31845-2012 Локомотивы на газовом топливе.pdf" />
-    <None Include="Documents\GOST\ГОСТ 31846-2012 Специальный подвижной состав. Требования к прочности несущих конструкций и динамическим качествам..pdf" />
-    <None Include="Documents\GOST\ГОСТ 4.346-85 Система показателей качества продукции. Электровозы магистральные.pdf" />
-    <None Include="Documents\GOST\ГОСТ 6962-75 Транспорт электрифицированный с питанием от контактной сети.pdf" />
-    <None Include="Documents\GOST\ГОСТ 8.417-2002_0 Единицы величин.pdf" />
-    <None Include="Documents\GOST\ГОСТ 9238 Габариты подвижного состава и приближения строений.pdf" />
-    <None Include="Documents\GOST\ГОСТ 9544 ОТМЕНЕН Арматура трубопроводная запорная. Классы и нормы герметичности затворов.pdf" />
-    <None Include="Documents\GOST\ГОСТ Р 54334-2011 Токоприемники железнодорожного подвижного состава.pdf" />
-    <None Include="Documents\GOST\ГОСТ Р 54808-2011 Арматура трубопроводная запорная. Классы и нормы герметичности затворов.pdf" />
-    <None Include="Documents\GOST\ГОСТ Р 55182-2012 Вагоны пассажирские локомотивной тяги. Общие ТТ.pdf" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -283,7 +195,15 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\Launcher.Core\Launcher.Core.csproj">
+      <Project>{bd1b8356-08b1-4b0c-b08d-d2504d954be2}</Project>
+      <Name>Launcher.Core</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="Model\Model.cs" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.94.0\build\net45\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.94.0\build\net45\System.Data.SQLite.Core.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
