--- a/Launcher/packages/repositories.config
+++ b/Launcher/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\DocumentModule\packages.config" />
+  <repository path="..\Launcher.Core\packages.config" />
   <repository path="..\Launcher\packages.config" />
 </repositories>
