--- a/Launcher/Launcher.Core/Launcher.Core.csproj
+++ b/Launcher/Launcher.Core/Launcher.Core.csproj
@@ -49,7 +49,7 @@
     <Compile Include="User.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="DB\db.db" />
+    <None Include="Db\db.db" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
