--- a/Launcher/packages/repositories.config
+++ b/Launcher/packages/repositories.config
@@ -2,5 +2,6 @@
 <repositories>
   <repository path="..\DocumentModule\packages.config" />
   <repository path="..\Launcher.Core\packages.config" />
+  <repository path="..\Launcher.Module.Document\packages.config" />
   <repository path="..\Launcher\packages.config" />
 </repositories>
