--- a/Launcher/packages/repositories.config
+++ b/Launcher/packages/repositories.config
@@ -3,5 +3,6 @@
   <repository path="..\DocumentModule\packages.config" />
   <repository path="..\Launcher.Core\packages.config" />
   <repository path="..\Launcher.Module.Document\packages.config" />
+  <repository path="..\Launcher.Module.Inspection\packages.config" />
   <repository path="..\Launcher\packages.config" />
 </repositories>
