--- a/Launcher/Launcher.Core/Launcher.Core.csproj
+++ b/Launcher/Launcher.Core/Launcher.Core.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <Compile Include="DataBase.cs" />
     <Compile Include="IModule.cs" />
+    <Compile Include="IModuleName.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Security.cs" />
     <Compile Include="User.cs" />
