--- a/Launcher/Launcher.Module.Inspection/Launcher.Module.Inspection.csproj
+++ b/Launcher/Launcher.Module.Inspection/Launcher.Module.Inspection.csproj
@@ -33,6 +33,10 @@
     <Reference Include="Caliburn.Micro">
       <HintPath>..\packages\Caliburn.Micro.Core.2.0.1\lib\net45\Caliburn.Micro.dll</HintPath>
     </Reference>
+    <Reference Include="Caliburn.Micro.Platform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=8e5891231f2ed21f, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Caliburn.Micro.2.0.1\lib\net45\Caliburn.Micro.Platform.dll</HintPath>
+    </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
@@ -50,12 +54,20 @@
     <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\MainInspectionViewModel.cs" />
+    <Compile Include="ViewModels\NoticeViewModel.cs" />
     <Compile Include="Views\MainInspectionView.xaml.cs">
       <DependentUpon>MainInspectionView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\NoticeView.xaml.cs">
+      <DependentUpon>NoticeView.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
     <Page Include="Views\MainInspectionView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\NoticeView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
