--- a/Launcher/Launcher.Module.Document/Launcher.Module.Document.csproj
+++ b/Launcher/Launcher.Module.Document/Launcher.Module.Document.csproj
@@ -56,6 +56,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AboutDoc.cs" />
     <Compile Include="ViewModels\MainDocViewModel.cs" />
     <Compile Include="Views\MainDocView.xaml.cs">
       <DependentUpon>MainDocView.xaml</DependentUpon>
