--- a/Launcher/Launcher.Module.Inspection/Launcher.Module.Inspection.csproj
+++ b/Launcher/Launcher.Module.Inspection/Launcher.Module.Inspection.csproj
@@ -51,6 +51,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AboutInspection.cs" />
     <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\MainInspectionViewModel.cs" />
