--- a/Launcher/Launcher/packages.config
+++ b/Launcher/Launcher/packages.config
@@ -8,6 +8,7 @@
   <package id="MahApps.Metro" version="0.14.0.0" targetFramework="net45" />
   <package id="MahApps.Metro.Resources" version="0.3.0.0" targetFramework="net45" />
   <package id="Microsoft.Composition" version="1.0.30" targetFramework="net45" />
+  <package id="NUnit" version="2.6.4" targetFramework="net45" />
   <package id="System.Data.SQLite" version="1.0.94.1" targetFramework="net45" />
   <package id="System.Data.SQLite.Core" version="1.0.94.0" targetFramework="net45" />
   <package id="System.Data.SQLite.EF6" version="1.0.94.0" targetFramework="net45" />
