--- a/Launcher/packages/repositories.config
+++ b/Launcher/packages/repositories.config
@@ -4,6 +4,7 @@
   <repository path="..\Launcher.Core\packages.config" />
   <repository path="..\Launcher.Module.Document\packages.config" />
   <repository path="..\Launcher.Module.Inspection\packages.config" />
+  <repository path="..\Launcher.Test\packages.config" />
   <repository path="..\Launcher.UnitTest\packages.config" />
   <repository path="..\Launcher\packages.config" />
 </repositories>
